// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollingSearchBox should render 1`] = `
<div>
  <Headroom
    height={45}
    onStickyTopChanged={[Function]}
    parent={
      <html>
        <head />
        <body />
      </html>
    }
    pinStart={0}
    scrollHeight={45}
    zIndex={1}
  >
    <SearchInput
      filterText="Test"
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
      spaceSearch={false}
    />
  </Headroom>
  <MockNode />
</div>
`;

exports[`ScrollingSearchBox should set correct reference 1`] = `
<div>
  <div
    class="Headroom__HeaderWrapper-sc-16d3zk-0 kGXTwn"
  >
    <div
      class="SearchInput__Spacer-sc-1brkyza-0"
    >
      <div
        class="SearchInput__Wrapper-sc-1brkyza-2 imWPGV"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-search fa-w-16 SearchInput__SearchIcon-sc-1brkyza-3 iwovYG"
          data-icon="search"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
            fill="currentColor"
          />
        </svg>
        <input
          aria-label="Placeholder"
          class="SearchInput__TextInput-sc-1brkyza-1 hckYOC"
          placeholder="Placeholder"
          type="text"
          value="Test"
        />
      </div>
    </div>
  </div>
  <div />
</div>
`;

exports[`ScrollingSearchBox should space search 1`] = `
<div>
  <Headroom
    height={45}
    onStickyTopChanged={[Function]}
    parent={
      <html>
        <head />
        <body />
      </html>
    }
    pinStart={0}
    scrollHeight={45}
    zIndex={1}
  >
    <SearchInput
      filterText="Test"
      onFilterTextChange={[Function]}
      placeholderText="Placeholder"
      spaceSearch={true}
    />
  </Headroom>
  <MockNode />
</div>
`;
